<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:layout_gravity="start">
        <TextView
            android:id="@+id/dataFromSD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:padding="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/import_to_sdcard"
            android:textColor="#99000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/import_to_sdcard_tip"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/md_grey_300" />

        <TextView
            android:id="@+id/dataToSD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center|start"
            android:padding="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/export_to_sdcard"
            android:textColor="#99000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/export_to_sdcard_tip"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/md_grey_300" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:gravity="center"
                android:text="@string/app_lock"
                android:textColor="#99000000"
                android:textSize="20sp" />

            <ToggleButton
                android:id="@+id/lockSwitcher"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/circle_white"
                android:gravity="center" />

        </LinearLayout>

        <TextView
            android:id="@+id/reset_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="start"
            android:padding="16dp"
            android:text="@string/reset_password"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/md_grey_300" />

        <TextView
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="HelpClick"
            android:padding="16dp"
            android:text="@string/use_help"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/md_grey_300" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/contact"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>