<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:background="@color/md_green_500"
        android:layout_height="45dp">
        <RadioButton
            android:id="@+id/bar_date"
            android:button="@null"
            android:textSize="16sp"
            android:checked="true"
            android:background="@drawable/bg_left_radius"
            android:text="@string/date"
            android:textColor="@color/md_white_1000"
            android:layout_width="wrap_content"
            android:layout_height="35dp" />
        <RadioButton
            android:id="@+id/bar_time"
            android:textSize="16sp"
            android:button="@null"
            android:background="@drawable/bg_right_radius"
            android:text="@string/time"
            android:textColor="@color/md_white_1000"
            android:layout_width="wrap_content"
            android:layout_height="35dp" />
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/datePager"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/pick_ok"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/basic_click"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/md_white_1000"
        android:textSize="18sp" />
</LinearLayout>